@@ -86,11 +86,11 @@
  *
  ****************************************************************************/
 
-void NXGL_FUNCNAME(nxgl_filltrapezoid,NXGLIB_SUFFIX)(
-  FAR struct lcd_planeinfo_s *pinfo,
-  FAR const struct nxgl_trapezoid_s *trap,
-  FAR const struct nxgl_rect_s *bounds,
-  nxgl_mxpixel_t color)
+void NXGL_FUNCNAME(nxgl_filltrapezoid,NXGLIB_SUFFIX)
+  (FAR struct lcd_planeinfo_s *pinfo,
+   FAR const struct nxgl_trapezoid_s *trap,
+   FAR const struct nxgl_rect_s *bounds,
+   NXGL_PIXEL_T color)
 {
   unsigned int ncols;
   unsigned int dy;
